crates/ditto-checker/tests/golden/type-errors/rebound_import_constructor.ditto
module Test exports (..)

import Data.Stuff (
    Maybe(..)
)
import More.Stuff as S (
    Kinda(..)
)

